<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="MainActivity">

    <LinearLayout
        android:id="@+id/linear_menu"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@color/purple"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/image_all"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:contentDescription="@string/todas_frase"
            android:src="@drawable/ic_all" />

        <ImageView
            android:id="@+id/image_happy"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:contentDescription="@string/frases_de_moticacao"
            android:src="@drawable/ic_happy" />

        <ImageView
            android:id="@+id/image_sunny"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:contentDescription="@string/frases_da_manha"
            android:src="@drawable/ic_sun" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_menu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"

        android:gravity="center"
        android:padding="8dp"
        android:text="@string/usuario"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerInParent="true"
        android:text="@string/seu_nome"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <View
        android:layout_width="128dp"
        android:layout_height="3dp"
        android:layout_below="@id/text_phrase"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@color/dark_fundo_main"
        android:elevation="5dp" />

    <Button
        android:id="@+id/button_new_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/light_purple"

        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/novo_texto"
        android:textColor="@color/white" />

</RelativeLayout>